--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,18 +51,21 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to index_path %></li>
-          <!--未ログイン-->
+          <li><%= link_to "index", index_path %></li>
+          <!--ログイン済-->
+          <% if logged_in? %>
           <li><%= link_to "ホーム", root_path %></li>
           <li><%= link_to "新規投稿", "#" %></li>
           <li><%= link_to "投稿一覧", "#" %></li>
           <li><%= link_to "マイページ", "#" %></li>
-          <li><%#= link_to "ログアウト", logout_path, method :delete %></li>
-          <!-- ログイン済-->
+          <li><%= link_to "ログアウト", logout_path %></li>
+          <!-- 未ログイン-->
+          <% else %>
           <li><%= link_to "ホーム", root_path %></li>
           <li><%= link_to "投稿一覧", "#" %></li>
           <li><%= link_to "サインアップ", new_user_path %></li>
           <li><%= link_to "ログイン", login_path %></li>
+          <% end %>
         </ul>
       </div>
       <!--/.nav-collapse -->
