--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
           <li><%= link_to "新規投稿", "#" %></li>
           <li><%= link_to "投稿一覧", "#" %></li>
           <li><%= link_to "マイページ", "#" %></li>
-          <li><%= link_to "ログアウト", logout_path %></li>
+          <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
           <!-- 未ログイン-->
           <% else %>
           <li><%= link_to "ホーム", root_path %></li>
