--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,8 +2,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
-          <h1>Bolt Template</h1>
-          <h2>Awesome Bootstrap Template</h2>
+          <h1>Portfolio</h1>
+          <h2>Portfolio</h2>
         </div>
         <!-- /col-lg-8 -->
       </div>
