--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,8 +7,20 @@
             <h2 class="topic-author">
               <%= topic.user.name %>
             </h2>
-            <%= image_tag topic.image_path.url %>
-            <i class="far fa-heart like-btn" ></i>
+            <% if topic.image_path.url %>
+              <%= image_tag topic.image_path.url %>
+            <% end %>
+            <i class="far fa-comment-dots like-btn"></i>
+            <% if !topic.like_users.include?(current_user) %>
+              <%= link_to likes_path(topic_id: topic.id), method: :post do %>
+                <i class="far fa-heart like-btn" ></i>
+              <% end %>
+            <% else %>
+              <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
+                <i class="fas fa-heart unlike-btn"></i>
+              <% end %>
+            <% end %>
+            <%= topic.like_users.count %>
             <!--<i class="fas fa-heart unlike-btn"></i>-->
             <p class="topic-text">
               <%= topic.description %>
