--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,7 @@
           <li><%= link_to "新規投稿", new_topic_path %></li>
           <li><%= link_to "投稿一覧", topics_path %></li>
           <li><%= link_to "マイページ", "#" %></li>
+          <li><%= link_to "いいね一覧", likes_index_path %></li>
           <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
           <!-- 未ログイン-->
           <% else %>
