--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -29,5 +29,8 @@
         </div>
       </div>
     <% end %>
+    <div class="text-center">
+      <%= paginate @topics %>
+    </div>
   </div>
 </div>
