--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -471,3 +471,29 @@ hr {
     color: $state-danger-text;
   }
 }
+
+// paginate
+
+.pagination {
+  padding-top: 30px;
+  margin: auto;
+  width: 50%;
+  justify-content: center;
+
+  span {
+    background-color: rgba(158, 158, 158, 0.4);
+    text-align: center;
+    width: 50px;
+    border: solid 1px #344963;
+    color: rgb(197, 20, 159);
+    transition: .3s;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+
+    &:hover, a:hover {
+      transition: .3s;
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1);
+    }
+  }
+}
