--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,9 +57,23 @@
           <li><%= link_to "ホーム", root_path %></li>
           <li><%= link_to "新規投稿", new_topic_path %></li>
           <li><%= link_to "投稿一覧", topics_path %></li>
-          <li><%= link_to "マイページ", current_user %></li>
           <li><%= link_to "いいね一覧", likes_index_path %></li>
-          <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
+          
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              アカウント <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "マイページ", current_user %></li>
+              <li><%= link_to "自分の投稿", "#" %></li>
+              <li><%= link_to "設定", "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "ログアウト", logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+          
           <!-- 未ログイン-->
           <% else %>
           <li><%= link_to "ホーム", root_path %></li>
