add date and time

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -25,6 +25,9 @@
             <p class="topic-text">
               <%= topic.description %>
             </p>
+            <div class="text-right" >
+            <%= l topic.created_at %>
+            </div>
           </div>
         </div>
       </div>
