--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -42,7 +42,7 @@ p {
 /* Links */
 
 a {
-  color: #f85c37;
+  color: black;
   word-wrap: break-word;
   -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
   -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -51,7 +51,7 @@ a {
   transition: color 0.1s ease-in, background 0.1s ease-in;
 
   &:hover, &:focus {
-    color: #7b7b7b;
+    color: black;
     text-decoration: none;
     outline: 0;
   }
@@ -406,6 +406,7 @@ hr {
 // topics index
 .topic-index-wrapper {
   padding-top: 70px;
+  padding-bottom: 70px;
   background-color: #fafafa;
   .topic-index-single {
     background-color: #fff;
@@ -417,6 +418,9 @@ hr {
     .topic-author {
       padding-right: 20px;
       padding-left: 20px;
+      .cord{
+        position: relative;
+      }
     }
 
     .topic-text {
