--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,27 +7,46 @@
             <h2 class="topic-author">
               <%= topic.user.name %>
             </h2>
-            <% if topic.image_path.url %>
-              <%= image_tag topic.image_path.url %>
-            <% end %>
-            <i class="far fa-comment-dots like-btn"></i>
-            <% if !topic.like_users.include?(current_user) %>
-              <%= link_to likes_path(topic_id: topic.id), method: :post do %>
-                <i class="far fa-heart like-btn" ></i>
+            <div class="card">
+              <% if topic.password_digest.nil? %>
+              <% if topic.image_path.url %>
+                <%= link_to topic_path(topic) do %>
+                  <%= image_tag topic.image_path.url %>
+                <% end %>
               <% end %>
-            <% else %>
-              <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
-                <i class="fas fa-heart unlike-btn"></i>
+              <% else %>
+              <%= link_to topic_passwords_path do %>
+                <%= image_tag "password.jpg" %>
+                <% end %>
               <% end %>
-            <% end %>
-            <%= topic.like_users.count %>
-            <!--<i class="fas fa-heart unlike-btn"></i>-->
-            <p class="topic-text">
-              <%= topic.description %>
-            </p>
-            <div class="text-right" >
-            <%= l topic.created_at %>
             </div>
+              <i class="far fa-comment-dots like-btn"></i>
+              <% if !topic.like_users.include?(current_user) %>
+                <%= link_to likes_path(topic_id: topic.id), method: :post do %>
+                  <i class="far fa-heart like-btn" ></i>
+                <% end %>
+              <% else %>
+                <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
+                  <i class="fas fa-heart unlike-btn"></i>
+                <% end %>
+              <% end %>
+              <%= topic.like_users.count %>
+              <div class="card">
+                <%= link_to topic_path(topic) do %>
+              <% if topic.password_digest.nil? %>
+              <p class="topic-text">
+                <%= topic.description %>
+              </p>
+              <% else%>
+                <p class="topic-text">
+                <%= link_to "secret", topic_passwords_path %>
+                </p>
+              <% end %>
+                <div class="text-right" >
+                  <%= l topic.created_at %>
+                </div>
+                <% end %>
+              </div>
           </div>
         </div>
       </div>
