--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -21,23 +21,32 @@
               <% end %>
             </div>
               <i class="far fa-comment-dots like-btn"></i>
+              <% if logged_in? %>
               <% if !topic.like_users.include?(current_user) %>
-                <%= link_to likes_path(topic_id: topic.id), method: :post do %>
-                  <i class="far fa-heart like-btn" ></i>
+                  <%= link_to likes_path(topic_id: topic.id), method: :post do %>
+                    <i class="far fa-heart like-btn" ></i>
+                  <% end %>
+                <% else %>
+                  <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
+                    <i class="fas fa-heart unlike-btn"></i>
+                  <% end %>
                 <% end %>
+                <%= topic.like_users.count %>
               <% else %>
-                <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
-                  <i class="fas fa-heart unlike-btn"></i>
-                <% end %>
+              <% if !topic.like_users.include?(current_user) %>
+                      <i class="far fa-heart like-btn" ></i>
+                  <% else %>
+                      <i class="fas fa-heart unlike-btn"></i>
+                  <% end %>
+                  <%= topic.like_users.count %>
               <% end %>
-              <%= topic.like_users.count %>
               <div class="card">
                 <%= link_to topic_path(topic) do %>
               <% if topic.password_digest.nil? %>
               <p class="topic-text">
                 <%= topic.description %>
               </p>
-              <% else%>
+              <% else %>
                 <p class="topic-text">
                 <%= link_to "secret", topic_passwords_path %>
                 </p>
