--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,64 +4,74 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
+
             <h2 class="topic-author">
               <%= topic.user.name %>
             </h2>
+
             <div class="card">
               <% if topic.password_digest.nil? %>
-              <% if topic.image_path.url %>
-                <%= link_to topic_path(topic) do %>
-                  <%= image_tag topic.image_path.url %>
+                <% if topic.image_path.url %>
+                  <%= link_to topic_path(topic) do %>
+                    <%= image_tag topic.image_path.url %>
+                  <% end %>
                 <% end %>
-              <% end %>
+
               <% else %>
-              <%= link_to topic_passwords_path do %>
-                <%= image_tag "password.jpg" %>
+              
+                <%= link_to "/topic_password/#{topic.id}", id: topic.id do %>
+                  <%= image_tag "password.jpg" %>
                 <% end %>
               <% end %>
             </div>
-              <i class="far fa-comment-dots like-btn"></i>
-              <% if logged_in? %>
+
+            <i class="far fa-comment-dots like-btn"></i>
+            <% if logged_in? %>
               <% if !topic.like_users.include?(current_user) %>
-                  <%= link_to likes_path(topic_id: topic.id), method: :post do %>
-                    <i class="far fa-heart like-btn" ></i>
-                  <% end %>
-                <% else %>
-                  <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
-                    <i class="fas fa-heart unlike-btn"></i>
-                  <% end %>
+                <%= link_to likes_path(topic_id: topic.id), method: :post do %>
+                  <i class="far fa-heart like-btn" ></i>
                 <% end %>
+              <% else %>
+                <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
+                  <i class="fas fa-heart unlike-btn"></i>
+                <% end %>
+              <% end %>
                 <%= topic.like_users.count %>
-              <% else %>
+            <% else %>
               <% if !topic.like_users.include?(current_user) %>
-                      <i class="far fa-heart like-btn" ></i>
-                  <% else %>
-                      <i class="fas fa-heart unlike-btn"></i>
-                  <% end %>
-                  <%= topic.like_users.count %>
-              <% end %>
-              <div class="card">
-                <%= link_to topic_path(topic) do %>
-              <% if topic.password_digest.nil? %>
-              <p class="topic-text">
-                <%= topic.description %>
-              </p>
+                <i class="far fa-heart like-btn" ></i>
               <% else %>
-                <p class="topic-text">
-                <%= link_to "secret", topic_passwords_path %>
-                </p>
+                <i class="fas fa-heart unlike-btn"></i>
               <% end %>
+                <%= topic.like_users.count %>
+            <% end %>
+            
+            <div class="card">
+              <%= link_to topic_path(topic) do %>
+                <% if topic.password_digest.nil? %>
+                  <p class="topic-text">
+                    <%= topic.description %>
+                  </p>
+                <% else %>
+                  <p class="topic-text">
+                    <%= link_to "secret", "/topic_password/#{topic.id}", id: topic.id %>
+                  </p>
+                <% end %>
+              
                 <div class="text-right" >
                   <%= l topic.created_at %>
                 </div>
-                <% end %>
-              </div>
+              <% end %>
+            </div>
+            
           </div>
         </div>
       </div>
     <% end %>
-    <div class="text-center">
-      <%= paginate @topics %>
-    </div>
+    
+      <div class="text-center">
+        <%= paginate @topics %>
+      </div>
+      
   </div>
 </div>
