--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -3,26 +3,37 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Add Picture</h1>
-        <%= form_for @topic do |f| %>
-          <div class="form-group">
-            <%= f.label :image_path %>
-            <%= f.file_field :image_path %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :description %>
-            <%= f.text_area :description, class: 'form-control' %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :password %>
-            <%= f.text_field :password, class: 'form-control' %>
-            <%= link_to "パスワードとは？", "#" %>
-          </div>
-
-          <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
-
-        <% end %>
+          <%= form_for @topic do |f| %>
+          
+            <% if @topic.errors.any? %>
+              <div id="error_explanation">
+                <ul>
+                  <% @topic.errors.full_messages.each do |msg| %>
+                    <li><%= msg %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+          
+            <div class="form-group">
+              <%= f.label :image_path %>
+              <%= f.file_field :image_path %>
+            </div>
+  
+            <div class="form-group">
+              <%= f.label :description %>
+              <%= f.text_area :description, class: 'form-control' %>
+            </div>
+  
+            <div class="form-group">
+              <%= f.label :password %>
+              <%= f.password_field :password, class: 'form-control' %>
+              <%= link_to "パスワードとは？", "#" %>
+            </div>
+  
+            <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
+  
+          <% end %>
       </div>
     </div>
   </div>
