--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,101 +2,25 @@
 <html>
   <head>
     <title>Portfolio</title>
-    <%= csrf_meta_tags %>
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/meta' %>
+  </head>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <meta charset="utf-8">
-  <title>portfolio</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
-
-  <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Raleway:400,300,700,900" rel="stylesheet">
-
-  <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Template Name: Bolt
-    Template URL: https://templatemag.com/bolt-bootstrap-agency-template/
-    Author: TemplateMag.com
-    License: https://templatemag.com/license/
-  ======================================================= -->
-</head>
-
-<body data-spy="scroll" data-offset="80" data-target="#thenavbar">
-
-      <!-- Fixed navbar -->
-  <div id="thenavbar" class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="navbar-brand" href="/"><i class="fas fa-key"></i></a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "index", index_path %></li>
-          <!--ログイン済-->
-          <% if logged_in? %>
-          <li><%= link_to "ホーム", root_path %></li>
-          <li><%= link_to "新規投稿", new_topic_path %></li>
-          <li><%= link_to "投稿一覧", topics_path %></li>
-          <li><%= link_to "いいね一覧", likes_index_path %></li>
-          
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              アカウント <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "マイページ", current_user %></li>
-              <li><%= link_to "自分の投稿", "#" %></li>
-              <li><%= link_to "設定", "#" %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "ログアウト", logout_path, method: :delete %>
-              </li>
-            </ul>
-          </li>
-          
-          <!-- 未ログイン-->
-          <% else %>
-          <li><%= link_to "ホーム", root_path %></li>
-          <li><%= link_to "投稿一覧", topics_path %></li>
-          <li><%= link_to "サインアップ", new_user_path %></li>
-          <li><%= link_to "ログイン", login_path %></li>
-          <% end %>
-        </ul>
-      </div>
-      <!--/.nav-collapse -->
-    </div>
-  </div>
-  <!-- flash -->
-  <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
-  <% end %>
-    <%= yield %>
+  <body data-spy="scroll" data-offset="80" data-target="#thenavbar">
+    <%= render 'layouts/header' %>
     
+    <!-- flash -->
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
+    <% end %>
+
+    <%= yield %>
+
     <script>
       $(function(){
         $(".alert").fadeOut(5000);
       });
     </script>
-
+    
   </body>
 </html>
