add profile in mypage

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,26 @@
-<div class="row">
-  <aside class="col-md-4">
-      <h1>
-        <%= @user.name %>
-      </h1>
-  </aside>
+<!-- Username-->
+<div class="container">
+  <!-- User Card-->
+  <div class="card">
+    <!-- Header -->
+    <div class="card-header">
+      <div class="card-header__avatar"><%= image_tag 'person.png', class:"avatar_img" %></div><a class="card-header__follow" href="#">Follow</a>
+    </div>
+    <!-- Content-->
+    <div class="card-content">
+      <div class="card-content__username"><%= @user.name %></div>
+    </div>
+    <!-- Footer-->
+    <div class="card-footer">
+      <div class="card-footer__pens"> <span><%= @user_topics %></span>
+        <div class="label">Topics</div>
+      </div>
+      <div class="card-footer__followers"> <span><%= @user_likes %></span>
+        <div class="label">Likes</div>
+      </div>
+      <div class="card-footer__following"> <span>0</span>
+        <div class="label">comment</div>
+      </div>
+    </div>
+  </div>
 </div>
