--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -418,7 +418,7 @@ hr {
     .topic-author {
       padding-right: 20px;
       padding-left: 20px;
-      .cord{
+      .descript{
         position: relative;
       }
     }
@@ -499,5 +499,135 @@ hr {
       -webkit-transform: scale(1.1);
       transform: scale(1.1);
     }
+  }
+}
+
+// マイページ
+$white: #FFFFFF;
+$black: #000000;
+$dark-gray: lighten($black, 20%);
+$gray: lighten($black, 40%);
+$light-gray: lighten($black, 60%);
+
+$primary: #303841;
+$accent: #0781D7;
+
+body {
+  background: #F3F3F3;
+  color: $gray;
+  font-size: 14px;
+  font-family: 'Open Sans';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.card {
+  background: $white;
+  width: 300px;
+  border-radius: 4px;
+  box-shadow: 0 10px 20px rgba($black, 0.2);
+  margin: 0 auto;
+  overflow: hidden;
+  margin-top: 70px;
+
+  &-header {
+    position: relative;
+    background: $primary;
+    height: 200px;
+    text-align: center;
+    overflow: hidden;
+    
+    &__avatar {
+      background: $white;
+      background-position: center 30%;
+      background-size: 100%;
+      height: 100%;
+      width: 100%;
+      
+      .avatar_img{
+        position: relative;
+        top: 60px;
+      }
+    }
+    
+    &__follow {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: $white;
+      border-radius: 2px;
+      box-shadow: 0 2px 4px rgba($black, 0.2);
+      padding: 6px 10px;
+      color: $dark-gray;
+      font-size: 10px;
+      font-weight: 600;
+      line-height: normal;
+      text-decoration: none;
+      text-transform: uppercase;
+    }
+  }
+  
+  &-content {
+    text-align: center;
+    padding: 30px 20px;
+
+    &__username {
+      margin: 0 0 10px;
+      color: $dark-gray;
+      font-size: 14px;
+      font-weight: 600;
+
+      .badge {
+        display: inline-block;
+        background: #FCD000;
+        border-radius: 2px;
+        margin: 0 10px 0;
+        padding: 4px;
+        color: $dark-gray;
+        font-size: 10px;
+        font-weight: 600;
+        vertical-align: middle;
+      }
+    }
+    
+  }
+  
+  &-footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    background: #F3F3F3;
+    padding: 15px 40px;
+    color: $dark-gray;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    
+    .label {
+      display: block;
+      margin: 4px 0 0;
+      color: $gray;
+      font-size: 10px;
+      font-weight: 400;
+    }
+  }
+}
+
+.code {
+  background: rgba($black, 0.1);
+  max-width: 600px; 
+  border-radius: 2px;
+  margin: 40px auto 100px;
+  font-family: monospace;
+  overflow: hidden;  
+  overflow-x: auto;
+  
+  &:before {
+    content: 'HTML Code';
+    display: block;
+    padding: 20px 20px 0;
+    color: $dark-gray;
+    font-weight: 600;
   }
 }
