--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,7 +9,7 @@
               <%= topic.user.name %>
             </h2>
 
-            <div class="card">
+            <div class="descript">
               <% if topic.password_digest.nil? %>
                 <% if topic.image_path.url %>
                   <%= link_to topic_path(topic) do %>
@@ -18,7 +18,7 @@
                 <% end %>
 
               <% else %>
-              
+
                 <%= link_to "/topic_password/#{topic.id}", id: topic.id do %>
                   <%= image_tag "password.jpg" %>
                 <% end %>
@@ -45,8 +45,8 @@
               <% end %>
                 <%= topic.like_users.count %>
             <% end %>
-            
-            <div class="card">
+
+            <div class="descript">
               <%= link_to topic_path(topic) do %>
                 <% if topic.password_digest.nil? %>
                   <p class="topic-text">
@@ -57,21 +57,21 @@
                     <%= link_to "secret", "/topic_password/#{topic.id}", id: topic.id %>
                   </p>
                 <% end %>
-              
+
                 <div class="text-right" >
                   <%= l topic.created_at %>
                 </div>
               <% end %>
             </div>
-            
+
           </div>
         </div>
       </div>
     <% end %>
-    
+
       <div class="text-center">
         <%= paginate @topics %>
       </div>
-      
+
   </div>
 </div>
