--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -42,9 +42,11 @@
             <%= l @topic.created_at %><br>
           </div>
           
+          <% if @topic.user_id == current_user.id %>
           <div class="text-right" >
             <%= link_to '削除', "#{@topic.id}/destroy", method: :delete %>
           </div>
+          <% end %>
 
         </div>
       </div>
