--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -4,13 +4,29 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
+
             <h2 class="topic-author">
               <%= topic.user.name %>
             </h2>
-            <% if topic.image_path.url %>
-              <%= image_tag topic.image_path.url %>
-            <% end %>
+
+            <div class="descript">
+              <% if topic.password_digest.nil? %>
+                <% if topic.image_path.url %>
+                  <%= link_to topic_path(topic) do %>
+                    <%= image_tag topic.image_path.url %>
+                  <% end %>
+                <% end %>
+
+              <% else %>
+
+                <%= link_to "/topic_password/#{topic.id}", id: topic.id do %>
+                  <%= image_tag "password.jpg" %>
+                <% end %>
+              <% end %>
+            </div>
+
             <i class="far fa-comment-dots like-btn"></i>
+
             <% if !topic.like_users.include?(current_user) %>
               <%= link_to likes_path(topic_id: topic.id), method: :post do %>
                 <i class="far fa-heart like-btn" ></i>
@@ -21,15 +37,33 @@
               <% end %>
             <% end %>
             <%= topic.like_users.count %>
-            <p class="topic-text">
-              <%= topic.description %>
-            </p>
+
+            <div class="descript">
+              <%= link_to topic_path(topic) do %>
+                <% if topic.password_digest.nil? %>
+                  <p class="topic-text">
+                    <%= topic.description %>
+                  </p>
+                <% else %>
+                  <p class="topic-text">
+                    <%= link_to "secret", "/topic_password/#{topic.id}", id: topic.id %>
+                  </p>
+                <% end %>
+
+                <div class="text-right" >
+                  <%= l topic.created_at %>
+                </div>
+              <% end %>
+            </div>
+
           </div>
         </div>
       </div>
     <% end %>
+
     <div class="text-center">
       <%= paginate @like_topics %>
     </div>
+
   </div>
 </div>
