--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -25,18 +25,13 @@
               <% end %>
             </div>
 
-            <i class="far fa-comment-dots like-btn"></i>
-
-            <% if !topic.like_users.include?(current_user) %>
-              <%= link_to likes_path(topic_id: topic.id), method: :post do %>
-                <i class="far fa-heart like-btn" ></i>
-              <% end %>
-            <% else %>
-              <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
-                <i class="fas fa-heart unlike-btn"></i>
-              <% end %>
-            <% end %>
-            <%= topic.like_users.count %>
+            <div id="likes_buttons_<%= topic.id %>">
+              <ul class="comments-likes">
+                <li><i class="far fa-comment-dots like-btn"></i></li>
+                <li><%= render partial: 'like', locals: { topic: topic} %></li>
+                <li><%= topic.like_users.count %></li>
+              </ul>
+            </div>
 
             <div class="descript">
               <%= link_to topic_path(topic) do %>
