--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -25,26 +25,18 @@
               <% end %>
             </div>
 
-            <i class="far fa-comment-dots like-btn"></i>
-            <% if logged_in? %>
-              <% if !topic.like_users.include?(current_user) %>
-                <%= link_to likes_path(topic_id: topic.id), method: :post do %>
-                  <i class="far fa-heart like-btn" ></i>
+              <div id="likes_buttons_<%= topic.id %>">
+                <ul class="comments-likes">
+                  <% if logged_in? %>
+                  <li><i class="far fa-comment-dots like-btn"></i></li>
+                  <li><%= render partial: 'like', locals: { topic: topic} %></li>
+                  <li><%= topic.like_users.count %></li>
+              </div>
+                  <% else %>
+                  <li><i class="far fa-heart like-btn" ></i></li>
+                  <li><%= topic.like_users.count %></li>
                 <% end %>
-              <% else %>
-                <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
-                  <i class="fas fa-heart unlike-btn"></i>
-                <% end %>
-              <% end %>
-                <%= topic.like_users.count %>
-            <% else %>
-              <% if !topic.like_users.include?(current_user) %>
-                <i class="far fa-heart like-btn" ></i>
-              <% else %>
-                <i class="fas fa-heart unlike-btn"></i>
-              <% end %>
-                <%= topic.like_users.count %>
-            <% end %>
+                </ul>
 
             <div class="descript">
               <%= link_to topic_path(topic) do %>
