--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,9 +1,11 @@
 <% if !topic.like_users.include?(current_user) %>
   <%= link_to likes_path(topic_id: topic.id), method: :post, remote: true do %>
     <i class="far fa-heart like-btn" ></i>
+    <%= topic.like_users.count %>
   <% end %>
 <% else %>
   <%= link_to likes_path(topic_id: topic.id), method: :delete, remote: true do %>
     <i class="fas fa-heart unlike-btn"></i>
+    <%= topic.like_users.count %>
   <% end %>
 <% end %>
