--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-white">ユーザー情報の更新</h1>
+        <h1 class="text-center text-white">設定</h1>
         <%= form_for @user do |f| %>
         
           <% if @user.errors.any? %>
