--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">Add Picture</h1>
+        <h1 class="text-center">新規投稿</h1>
           <%= form_for @topic do |f| %>
 
             <% if @topic.errors.any? %>
@@ -16,19 +16,18 @@
             <% end %>
 
             <div class="form-group">
-              <%= f.label :image_path %>
+              <%= f.label :image_path, 'image(任意)' %>
               <%= f.file_field :image_path %>
             </div>
   
             <div class="form-group">
-              <%= f.label :description %>
+              <%= f.label :descript, 'description(必須)' %>
               <%= f.text_area :description, class: 'form-control' %>
             </div>
   
             <div class="form-group">
-              <%= f.label :password %>
+              <%= f.label :password, 'password(任意)' %>
               <%= f.password_field :password, class: 'form-control' %>
-              <%= link_to "パスワードとは？", "#" %>
             </div>
   
             <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
