--- a/app/views/users/_my_comments.html.erb
+++ b/app/views/users/_my_comments.html.erb
@@ -1,12 +1,12 @@
 <div class="topic-index-wrapper">
   <div class="container">
-    <% @topics.each do |topic| %>
+    <% @comments.each do |topic| %>
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
 
             <h2 class="topic-author">
-              <%= link_to topic.user.name, "#" %>
+              <%= topic.user.name %>
             </h2>
 
             <div class="descript">
@@ -30,11 +30,8 @@
                     <%= link_to topic_path(topic) do %>
                       <li><i class="far fa-comment-dots like-btn"></i></li>
                     <% end %>
-                    <li id="likes_buttons_<%= topic.id %>"><%= render partial: 'likes/like', locals: { topic: topic} %></li>
+                    <li id="likes_buttons_<%= topic.id %>"><%= render partial: 'topics/like', locals: { topic: topic} %></li>
                   <% else %>
-                    <%= link_to topic_path(topic) do %>
-                      <li><i class="far fa-comment-dots like-btn"></i></li>
-                    <% end %>
                     <li><i class="far fa-heart like-btn" ></i></li>
                     <li><%= topic.like_users.count %></li>
                   <% end %>
