--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -16,8 +16,8 @@
             <% end %>
 
             <div class="form-group">
-              <%= f.label :image_path, 'image(任意)' %>
-              <%= f.file_field :image_path %>
+              <%= f.label :image, 'image(任意)' %>
+              <%= f.file_field :image %>
             </div>
   
             <div class="form-group">
