--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,9 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+@import "custom.scss";
+
 /**
 * Template Name: Bolt
 * Template URL: https://templatemag.com/bolt-bootstrap-agency-template/
