--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -11,9 +11,9 @@
 
             <div class="descript">
               <% if topic.password_digest.nil? %>
-                <% if topic.image_path.url %>
+                <% if topic.image %>
                   <%= link_to topic_path(topic) do %>
-                    <%= image_tag topic.image_path.url %>
+                    <%= image_tag topic.image %>
                   <% end %>
                 <% end %>
 
