--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -11,7 +11,7 @@
 
             <div class="descript">
               <% if topic.password_digest.nil? %>
-                <% if topic.image %>
+                <% if topic.image.attached? %>
                   <%= link_to topic_path(topic) do %>
                     <%= image_tag topic.image %>
                   <% end %>
