--- a/app/views/users/_my_topics.html.erb
+++ b/app/views/users/_my_topics.html.erb
@@ -6,12 +6,12 @@
           <div class="topic-index-single">
 
             <h2 class="topic-author">
-              <%= topic.user.name %>
+              <%= link_to topic.user.name, user_path(topic.user.id) %>
             </h2>
 
             <div class="descript">
               <% if topic.password_digest.nil? %>
-                <% if topic.image %>
+                <% if topic.image.attached? %>
                   <%= link_to topic_path(topic) do %>
                     <%= image_tag topic.image %>
                   <% end %>
