update top page

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,71 +2,100 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
-          <h1>Portfolio</h1>
-          <h2>Portfolio</h2>
+          <h1>Portfolio</h1><br><br><br>
         </div>
-        <!-- /col-lg-8 -->
       </div>
-      <!-- /row -->
     </div>
-    <!-- /container -->
   </div>
-  <!-- /hello -->
 
   <div id="green">
     <div class="container">
       <div class="row">
         <div class="col-lg-5 centered">
-          <img src="img/iphone.png" alt="">
+          <%= image_tag 'iphone.png' %>
         </div>
-
         <div class="col-lg-7 centered">
-          <h3>WHAT WE CAN DO?</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <% unless logged_in? %>
+            <h3>Log In</h3>
+            <%= render 'sessions/login_form' %>
+          <% else %>
+            <h1 class="text-center">welcome</h1>
+          <% end %>
         </div>
       </div>
     </div>
   </div>
-  <div id="portfolio"></div>
+
+<div class="topic-index-wrapper">
   <div class="container">
-    <div class="row centered mt grid">
-      <h3>OUR LATEST WORK</h3>
-      <div class="mt"></div>
-      <div class="col-lg-4">
-        <a href="#"><img src="img/01.jpg" alt=""></a>
-      </div>
-      <div class="col-lg-4">
-        <a href="#"><img src="img/02.jpg" alt=""></a>
-      </div>
-      <div class="col-lg-4">
-        <a href="#"><img src="img/03.jpg" alt=""></a>
-      </div>
-    </div>
+    <h3 class="text-center">最近の投稿</h3>
 
-    <div class="row centered mt grid">
-      <div class="mt"></div>
-      <div class="col-lg-4">
-        <a href="#"><img src="img/04.jpg" alt=""></a>
-      </div>
-      <div class="col-lg-4">
-        <a href="#"><img src="img/05.jpg" alt=""></a>
-      </div>
-      <div class="col-lg-4">
-        <a href="#"><img src="img/06.jpg" alt=""></a>
-      </div>
-    </div>
+    <% @topics.first(3).each do |topic| %>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <div class="topic-index-single">
 
-    <div class="row mt centered">
-      <div class="col-lg-7 col-lg-offset-1 mt">
-        <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-      </div>
+            <h2 class="topic-author">
+              <%= link_to topic.user.name, user_path(topic.user.id) %>
+            </h2>
 
-      <div class="col-lg-3 mt">
-        <p><button type="button" class="btn btn-theme btn-lg">Email Me!</button></p>
+            <div class="descript">
+              <% if topic.password_digest.nil? %>
+                <% if topic.image.attached? %>
+                  <%= link_to topic_path(topic) do %>
+                    <%= image_tag topic.image %>
+                  <% end %>
+                <% end %>
+
+              <% else %>
+
+                <%= link_to "/topic_password/#{topic.id}", id: topic.id do %>
+                  <%= image_tag "password.jpg" %>
+                <% end %>
+              <% end %>
+            </div>
+
+                <ul class="comments-likes">
+                  <% if logged_in? %>
+                    <%= link_to topic_path(topic) do %>
+                      <li><i class="far fa-comment-dots like-btn"></i></li>
+                    <% end %>
+                    <li id="likes_buttons_<%= topic.id %>"><%= render partial: 'likes/like', locals: { topic: topic} %></li>
+                  <% else %>
+                    <%= link_to topic_path(topic) do %>
+                      <li><i class="far fa-comment-dots like-btn"></i></li>
+                    <% end %>
+                    <li><i class="far fa-heart like-btn" ></i></li>
+                    <li><%= topic.like_users.count %></li>
+                  <% end %>
+                </ul>
+
+            <div class="descript">
+              <%= link_to topic_path(topic) do %>
+                <% if topic.password_digest.nil? %>
+                  <p class="topic-text">
+                    <%= topic.description %>
+                  </p>
+                <% else %>
+                  <p class="topic-text">
+                    <%= link_to "secret", "/topic_password/#{topic.id}", id: topic.id %>
+                  </p>
+                <% end %>
+
+                <div class="text-right" >
+                  <%= l topic.created_at %>
+                </div>
+              <% end %>
+            </div>
+
+          </div>
+        </div>
       </div>
-    </div>
+    <% end %>
+    <br><div class="text-center"><%= link_to "もっと見る", topics_path %></div>
+
   </div>
-
+</div>
 
   <div id="skills">
     <div class="container">
