--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -277,10 +277,10 @@ hr {
       border-radius: 50%;
       width: 24px;
       height: 24px;
-      border: 3px solid #18d26e;
-      border-top-color: #eee;
-      -webkit-animation: animate-loading 1s linear infinite;
-      animation: animate-loading 1s linear infinite;
+      // border: 3px solid #18d26e;
+      // border-top-color: #eee;
+      // -webkit-animation: animate-loading 1s linear infinite;
+      // animation: animate-loading 1s linear infinite;
     }
   }
 
@@ -440,6 +440,10 @@ hr {
       width: 35px;
       height: 30px;
       margin-left: 20px;
+    }
+    
+    .commnet-index{
+      
     }
   }
 }
@@ -666,4 +670,13 @@ body {
 
 .mypage-footer{
   padding-top: 70px;
+}
+
+// comment
+.comment-user{
+  padding-bottom: 100px;
+}
+
+.comennt-index {
+  padding-bottom: 40pxr;
 }
