--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -33,15 +33,22 @@
             <% end %>
           <% end %>
 
-<% @comments.each do |c| %>
-    <%= c.content %>
-<% end %>
+          <% @comments.each do |c| %>
+            <div class="text-left">@<%= link_to c.user.name, user_path(c.user_id) %></div>
+            <%= c.content %>
+            <div class="text-right"><%= l c.created_at %></div>
+            <% if current_user == c.user %>
+              <div class="text-right"><%= link_to "削除", topic_comment_path(@topic, c), method: :delete %></div>
+            <% end %>
+          <% end %>
 
-<%= form_for [@topic, @comment] do |f| %>
-  <%= f.text_field :content %>
-  <br>
-  <%= f.submit 'コメントする' %>
-<% end %>
+          <%= form_for [@topic, @comment] do |f| %>
+            <div class="form-group">
+              <%= f.label :content %>
+              <%= f.text_area :content, class: 'form-control' %>
+            </div>
+            <%= f.submit 'コメントする' %>
+          <% end %>
 
         </div>
       </div>
