--- a/app/views/users/_my_comments.html.erb
+++ b/app/views/users/_my_comments.html.erb
@@ -1,19 +1,19 @@
 <div class="topic-index-wrapper">
   <div class="container">
-    <% @comments.each do |topic| %>
+    <% @my_comments.each do |topic| %>
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
 
             <h2 class="topic-author">
-              <%= topic.user.name %>
+              <%= link_to topic.user.name, user_path(topic.user.id) %>
             </h2>
 
             <div class="descript">
               <% if topic.password_digest.nil? %>
-                <% if topic.image_path.url %>
+                <% if topic.image.attached? %>
                   <%= link_to topic_path(topic) do %>
-                    <%= image_tag topic.image_path.url %>
+                    <%= image_tag topic.image %>
                   <% end %>
                 <% end %>
 
@@ -30,7 +30,7 @@
                     <%= link_to topic_path(topic) do %>
                       <li><i class="far fa-comment-dots like-btn"></i></li>
                     <% end %>
-                    <li id="likes_buttons_<%= topic.id %>"><%= render partial: 'topics/like', locals: { topic: topic} %></li>
+                    <li id="likes_buttons_<%= topic.id %>"><%= render partial: 'likes/like', locals: { topic: topic} %></li>
                   <% else %>
                     <li><i class="far fa-heart like-btn" ></i></li>
                     <li><%= topic.like_users.count %></li>
@@ -60,9 +60,9 @@
       </div>
     <% end %>
 
-      <div class="text-center">
-        <%= paginate @topics %>
-      </div>
+      <!--<div class="text-center">-->
+        <%#= paginate @topics %>
+      <!--</div>-->
 
   </div>
 </div>
